# hermes-agent

./: .gitignore  cli.py  conftest.py  package-lock.json  pyproject.toml  run_agent.py
acp/: __init__.py  schema.py
acp_adapter/: acp_compat.py  auth.py  edit_approval.py
agent/: agent_init.py  agent_runtime_helpers.py  auxiliary_client.py  chat_completion_helpers.py  conversation_loop.py  credential_pool.py  model_metadata.py  plugin_registries.py  quantum_crypto.py
agent/transports/: anthropic.py  bedrock.py
apps/desktop/: package.json
gateway/: run.py
hermes_cli/: auth.py  auth_commands.py  doctor.py  gateway.py  main.py  model_switch.py  models.py  plugins.py  setup.py  web_server.py
nix/: checks.nix
plugins/terminals/vercel/: __init__.py  plugin.yaml  pyproject.toml
plugins/terminals/vercel/hermes_agent_vercel/: __init__.py  vercel_sandbox.py
scripts/: run_tests.sh
tests/: test_ctx_halving_fix.py  test_project_metadata.py  test_quantum_crypto.py
tests/agent/: conftest.py  test_auxiliary_client.py  test_auxiliary_transport_autodetect.py  test_credential_pool.py  test_model_metadata.py  test_transcription_registry.py  test_tts_registry.py
tests/gateway/: test_dm_topics.py  test_text_batching.py  test_voice_command.py
tests/hermes_cli/: test_api_key_providers.py  test_runtime_provider_resolution.py
tests/run_agent/: conftest.py  test_run_agent.py
tests/tools/: test_config_null_guard.py  test_notify_utils.py  (+3 more)
tools/: image_generation_tool.py  notify_utils.py  registry.py  send_message_tool.py  terminal_tool.py  voice_mode.py
(+50 files in other folders)
