[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent-vercel"
version = "0.1.0"
description = "Vercel Sandbox execution environment plugin for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "hermes-agent",
    "vercel==0.5.7",
]

[project.entry-points."hermes_agent.plugins"]
vercel = "hermes_agent_vercel:register"

[tool.setuptools.packages.find]
include = ["hermes_agent_vercel*"]
